refactor: change method to POST and use form-data instead
