# stuart/routes/api.php
@@ -12,8 +12,14 @@ Route::group(['prefix' => 'v1'], function () {
     // Logged-in user only
     Route::group(['middleware' => 'auth:sanctum'], function () {
         Route::group(['prefix' => 'housekeeping', 'middleware' => ['role:admin']], function () {
-            Route::apiResource('region', \App\Http\Controllers\API\v1\Housekeeping\RegionController::class);
-            Route::apiResource('division', \App\Http\Controllers\API\v1\Housekeeping\DivisionController::class);
+            Route::apiResource('region', \App\Http\Controllers\API\v1\Housekeeping\RegionController::class)->except(['update']);
+            Route::post('region/{region}', [\App\Http\Controllers\API\v1\Housekeeping\RegionController::class, 'update']);
+
+            Route::apiResource('division', \App\Http\Controllers\API\v1\Housekeeping\DivisionController::class)->except(['update']);
+            Route::post('division/{division}', [\App\Http\Controllers\API\v1\Housekeeping\DivisionController::class, 'update']);
+
+            Route::apiResource('subdivision', \App\Http\Controllers\API\v1\Housekeeping\SubdivisionController::class)->except(['update']);
+            Route::post('subdivision/{subdivision}', [\App\Http\Controllers\API\v1\Housekeeping\SubdivisionController::class, 'update']);
         });
 
         // Ticket
